fixed y-overflow of map

--- a/webroot/css/forecastclash.css
+++ b/webroot/css/forecastclash.css
@@ -4323,7 +4323,7 @@ div.body-col p {
 }
 
 #map {
-    height: 95.2vh;
+    height: 92.66vh;
     z-index: 0;
 }
 
